# imgcompress

./: LICENSE  README.md  pyproject.toml
